• Cleaned up some more CSS and layout issues for tablets

--- a/client/templates/building/building.styl
+++ b/client/templates/building/building.styl
@@ -8,6 +8,11 @@ main.container
     width 94%
   @media screen and (min-width: 900px)
     max-width 860px
+  @media screen and (min-width: 992px)
+    max-width 97%
+    width 980px
+  @media screen and (min-width: 1200px)
+    max-width 1180px
 
 .breadcrumb
   padding 5px
@@ -54,8 +59,8 @@ main.container
 
     .building-main-info
       box-sizing border-box
-      @media screen and (max-width: 992px)
-        margin-bottom 20px
+      margin-bottom 20px
+      @media screen and (min-width: 992px)
         float right
 
       .building-main-info-title
