--- a/client/templates/layout/layout.css.styl
+++ b/client/templates/layout/layout.css.styl
@@ -44,6 +44,11 @@ a
     margin-left 6px
 	margin-right 6px
 
+i.fa-envelope
+  font-size 90%
+i.fa-mobile
+  font-size 115%
+
 button > .fa
   margin-right 6px
 
@@ -105,21 +110,36 @@ a.carousel-control .fa
     @media screen and (min-width: 768px)
       font-size: 16px !important
 
-.modal-body,
-.modal-body p
-  line-height 1.45
-
 .modal-content
   margin-bottom 30px
 
+  .modal-title > i
+    margin-right 6px
+    opacity .9
+
+.modal-body
+  line-height 1.45
+
 .modal-body
   p
-    font-size 15.5px
+    font-size 15px
+    line-height 1.4
+      @media screen and (min-width: 768px)
+        font-size 15.5px
+        line-height 1.45
+
   .form-control:not(textarea)
     @media screen and (min-width: 768px)
       height 36px
     @media screen and (min-width: 992px)
       height 38px
+
+  .form-group
+    @media screen and (max-width: 767px)
+      margin-bottom 9px
+    > label:not(.fg-label)
+      padding-top 6px
+      
 
 
 .sweet-alert
@@ -144,7 +164,7 @@ a.carousel-control .fa
 
 
 @media screen and (max-width: 768px)
-  .modal-title
+  .modal-title.withIcon
     text-indent -13px
     padding-left 25px
   .modal-body .row .col-xs-6
@@ -408,10 +428,7 @@ a.carousel-control .fa
       text-align center
       top 5px
       width 24px
-        .fa-envelope
-          font-size 90%
         .fa-mobile
-          font-size 115%
           position relative
           top 2px
 
@@ -460,8 +477,11 @@ a.carousel-control .fa
     white-space nowrap
 
   .fg-toggled + .fg-label
-    top -10px
-    font-size 12px
+    top -9px
+    font-size 10.5px
+    @media screen and (min-width: 768px)
+      top -11px
+      font-size 11.5px
 
 
 .has-success .help-block,
