--- a/client/templates/popUp/contactUs/contactUs.styl
+++ b/client/templates/popUp/contactUs/contactUs.styl
@@ -5,17 +5,21 @@
     margin 25px auto
   @media screen and (min-width: 1200px)
     margin-top 30px
+
   .contact-us-form
     padding 15px
     @media screen and (min-width: 768px)
       padding 5%
+
     .modal-header
       border 0 none
       font-family 'Montserrat', Helvetica, sans-serif
       font-size 18px
       color #272b30
       box-sizing border-box
-      padding 0 0 10px
+      padding 0 0 5px
+        @media screen and (max-width: 768px)
+          padding 0 0 10px
       .modal-title
         @media screen and (max-width: 768px)
           font-size 17px
@@ -32,13 +36,14 @@
       padding 0
       .contact-us-field
         font-family 'Montserrat', Helvetica, sans-serif
-        font-size 14px
+        font-size 12.5px
+          @media screen and (max-width: 768px)
+          font-size 14px
         color #272b30
         &#tour-question-wrapper
           .form-control-feedback
             display none !important
           @media screen and (max-width: 768px)
-            font-size 12.5px
             label
               padding-right 0
         &.row
@@ -83,9 +88,9 @@
                 line-height 15px
                 background-repeat no-repeat
                 background-position 0 0
-                font-size 14px
-                vertical-align middle
-                cursor pointer
+                @media screen and (max-width: 768px)
+                  vertical-align middle
+                  cursor pointer
             &:checked
               & ~ label
                 &.css-label
